# terrainforest

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: application.cpp  application.hpp  camera.hpp  main.cpp  node.hpp  ocean.cpp  ocean.hpp  plane.hpp  shader.frag  shader.vert  stage.hpp  util.hpp  vertex.hpp
